# previz-rust-experiment

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SUMMARY_AND_NEXT_STEPS.md  build.rs  fix_code.py
assets/: bakedColor.mat  eguiUi.mat  gizmoRotate.mat  pickId.mat  selectionOutline.mat
assets/environments/AdamsPlace/: AdamsPlace_ibl.ktx  AdamsPlace_skybox.ktx  sh.txt
assets/environments/ArtistWorkShop/: ArtistWorkShop_ibl.ktx  ArtistWorkShop_skybox.ktx  sh.txt
assets/scene/: scene.json
build_support/: bindings.cpp  bindings.rs
docs/: GPU_PICKING_EDITOR_OVERLAY_REFACTOR_SPEC.md  LONG_HORIZON_IMPLEMENTATION_LOG.md  M1_EXECUTION_CHECKLIST.md  TRANSFORM_GIZMO_MATH.md  V0_2_ARCHITECTURE.md
harness/: LIGHT_VALIDATION_PLAN.md  MATERIAL_VALIDATION_PLAN.md  README.md  run_asset_probe.ps1  run_light_suite.ps1
src/: filament.rs  main.rs
src/app/: egui_host.rs  input.rs  mod.rs  timing.rs
src/assets/: mod.rs
src/ffi/: mod.rs
src/render/: camera.rs  editor_overlay.rs  egui_overlay.rs  light_helpers.rs  mod.rs  pick.rs
src/scene/: mod.rs  serialization.rs
src/ui/: mod.rs
